# intentgate-gateway

./: .dockerignore  .gitignore  BENCHMARKS.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  SECURITY.md  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  gosec.yml  release.yml
cmd/gateway/: main.go
cmd/igctl/: main.go
dashboards/: README.md
dashboards/grafana/: intentgate-gateway.json
docs/: 01-quickstart.md  02-first-policy.md  03-first-agent.md  04-audit-verify.md  README.md
examples/demo-toolserver/: Dockerfile  README.md  pyproject.toml
examples/demo-toolserver/app/: main.py
internal/approvals/: approvals.go  id.go  memory.go  memory_test.go  postgres.go  schema.sql
internal/audit/: audit.go  audit_test.go  canonical.go  redact.go  redact_test.go
internal/auditstore/: chain_test.go  emitter.go  emitter_test.go  memory.go  memory_test.go  postgres.go  postgres_test.go  schema.sql  store.go
internal/budget/: budget.go  budget_test.go  memory.go  redis.go
internal/capability/: capability_test.go  check.go  codec.go  mint.go  sign.go  token.go
internal/extractor/: client.go  client_test.go
internal/handlers/: admin.go  admin_approvals_test.go  admin_audit_export_test.go  admin_audit_test.go  admin_audit_verify_test.go  admin_integrations_test.go  admin_mint_test.go  admin_policies.go  admin_policies_dryrun_test.go  admin_policies_test.go  admin_tenants_test.go  health.go  mcp.go  mcp_passthrough_test.go  toolcall.go
internal/mcp/: mcp_test.go  methods.go  types.go
scripts/: bench-job.yaml  bench.sh
(+38 files in other folders)
