[project]
name = "intentgate-demo-toolserver"
version = "0.1.0"
description = "Minimal HTTP-JSON-RPC tool server for IntentGate end-to-end demos. Not for production use."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "NetGnarus" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
